<resources>
    <string name="app_name">Image Trimmer 42</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Image description -->
    <string name="image_description">Image Description</string>

    <!-- Toast -->
    <string name="toast_a_backToExit">Press Back again to exit.</string>
    <string name="toast_e_album_error">Error getting selected files.</string>

    <!-- Dialog -->
    <string name="request_camera_permission">Camera Permission Required</string>
    <string name="request_camera_permission_rationale">Please grant permission to use the Camera so that you can register your instruments.</string>
    <string name="request_storage_permission">Storage Permission Required</string>
    <string name="request_storage_permission_rationale">Please grant permission to access the Storage so that you can use gallery photos.</string>
    <string name="alert_select_image_album">Select from album</string>
    <string name="alert_select_image_camera">Take a new photo</string>
    <string name="alert_delete_header_image">Are you sure you want to delete this photo?</string>

    <!-- ActivityMain -->
    <string name="txt_title_main">Select Image</string>
    <string name="txt_no_image">No Image</string>
    <string name="txt_template_header">Template</string>

    <!-- ActivityTrimView -->
    <string name="txt_title_trim">Trimming</string>
    <string name="txt_save">Save</string>

    <!-- ActivityCameraView -->
    <string name="txt_title_camera">Camera</string>
    <string name="txt_tap">Tap</string>
</resources>
