<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_layout"
    tools:context=".ActivityCameraView">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.024647887323944" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_close_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/ic_close"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@+id/guideline_close_x"
        app:layout_constraintTop_toTopOf="@+id/guideline_top_y"
        app:layout_constraintWidth_percent="0.05" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@id/img_close"
        app:layout_constraintEnd_toEndOf="@+id/img_close"
        app:layout_constraintHeight_percent="0.084507042253521"
        app:layout_constraintStart_toStartOf="@+id/img_close"
        app:layout_constraintTop_toTopOf="@+id/img_close"
        app:layout_constraintWidth_percent="0.15" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/txt_title_camera"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_close"
        app:layout_constraintWidth_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_camera_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.077464788732394" />

    <com.otaliastudios.cameraview.CameraView
        android:id="@+id/camera_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:keepScreenOn="true"
        app:cameraAudio="off"
        app:cameraFacing="back"
        app:cameraFlash="auto"
        app:cameraGestureLongTap="none"
        app:cameraGesturePinch="zoom"
        app:cameraGestureScrollHorizontal="exposureCorrection"
        app:cameraGestureScrollVertical="none"
        app:cameraGestureTap="autoFocus"
        app:cameraAutoFocusMarker="@string/cameraview_default_autofocus_marker"
        app:cameraAutoFocusResetDelay="3000"
        app:cameraMode="picture"
        app:cameraPlaySounds="false"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="@+id/guideline_camera_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_crop_area_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/camera_view"
        app:layout_constraintTop_toTopOf="@+id/camera_view">

        <View
            android:id="@+id/view_crop_area_top_cover"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#80000000"
            app:layout_constraintBottom_toTopOf="@+id/view_crop_area"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_crop_area"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_crop_area_bottom_cover"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#80000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_crop_area" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/camera_view"
        app:layout_constraintEnd_toEndOf="@+id/camera_view"
        app:layout_constraintStart_toStartOf="@+id/camera_view"
        app:layout_constraintTop_toTopOf="@+id/camera_view" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_camera_shutter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.4"
        android:clickable="true"
        android:elevation="0dp"
        android:focusable="true"
        app:backgroundTint="@color/colorPrimary"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_tap"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.140845070422535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_view"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/img_camera_shutter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.4"
        android:contentDescription="@string/image_description"
        android:elevation="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_camera_shutter"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/btn_camera_shutter"
        app:layout_constraintHeight_percent="0.110915492957746"
        app:layout_constraintStart_toStartOf="@+id/btn_camera_shutter"
        app:layout_constraintTop_toTopOf="@+id/btn_camera_shutter"
        app:srcCompat="@drawable/ic_camera_shutter" />

    <TextView
        android:id="@+id/txt_tap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:alpha="0.4"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/txt_tap"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera_shutter" />

</androidx.constraintlayout.widget.ConstraintLayout>